--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-items: center;    */
+  align-items: center;   
   text-align: center;
 }
 
@@ -40,6 +40,7 @@
   justify-content: center;
   margin-top: 20px;
   padding: 0 0 100px 0;
+  max-width: 953px;
 }
 
 @media screen and (max-width: 1419px) {
