--- a/src/css/MultiRoadmap.css
+++ b/src/css/MultiRoadmap.css
@@ -50,7 +50,7 @@
 .roadmap-stepper .MuiStepper-alternativeLabel {
   /* width: 730px; */
   min-width: 799px;
-  max-width: 883px;
+  max-width: 924px;
 }
 
 .roadmap-stepper .MuiStepper-root {
