--- a/src/css/SectionHeaderTitle.css
+++ b/src/css/SectionHeaderTitle.css
@@ -24,7 +24,7 @@
 }
 @media screen and (min-width: 1429px) {
   .section-header-content{
-    width: 1256px;
+    width: 1190px;
   }
 }
 
